force-app/main/default/objects/Portal_Config__c/Portal_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Portal Config</label>
</CustomObject>