force-app/main/default/objects/Portal_Config__c/fields/Teacher_Password_Hash__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Password_Hash__c</fullName>
    <label>Teacher Password Hash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>