force-app/main/default/objects/Portal_Config__c/fields/Teacher_Session_Token__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Session_Token__c</fullName>
    <label>Teacher Session Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>