force-app/main/default/objects/Portal_Config__c/fields/Teacher_Token_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Token_Expiration__c</fullName>
    <label>Teacher Token Expiration</label>
    <type>DateTime</type>
</CustomField>