force-app/main/default/objects/Portal_Config__c/fields/Teacher_Username__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Username__c</fullName>
    <label>Teacher Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>